# QA_GURU_BELEVTSEVA_HW_18

./: .gitignore  README.md  pyproject.toml
helpers/: allure_helpers.py  api_helpers.py
tests/: test_add_to_cart_api_ui.py
